--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,31 +14,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-25 Fri 10:01]
+#+CAPTION: Clock summary at [2017-08-26 Sat 13:13]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:08* |       |       | 100.0 |
+| *Total time*                                                                | *39:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:08   |       |       | 100.0 |
-| Active                                                                      |         | 39:08 |       | 100.0 |
+| Stories                                                                     | 39:36   |       |       | 100.0 |
+| Active                                                                      |         | 39:36 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.5 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.4 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  16.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:24 |   3.5 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  16.1 |
 | COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   7.2 |
-| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.0 |
+| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   2.9 |
 | COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   3.7 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  31.5 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  31.1 |
 | COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   5.6 |
-| COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   1.7 |
+| COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   1.6 |
 | COMPLETED Tailor is not handling initialisation correctly                   |         |       |  0:15 |   0.6 |
 | COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   2.6 |
 | COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   4.6 |
 | COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.1 |
-| COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   4.6 |
-| COMPLETED Add validation to tailor transforms                               |         |       |  0:20 |   0.9 |
-| COMPLETED Rename =meta_type= in JSON                                        |         |       |  3:29 |   8.9 |
-| COMPLETED Rename yarn object types in yarn.dia                              |         |       |  0:20 |   0.9 |
+| COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   4.5 |
+| COMPLETED Add validation to tailor transforms                               |         |       |  0:20 |   0.8 |
+| COMPLETED Rename =meta_type= in JSON                                        |         |       |  3:29 |   8.8 |
+| COMPLETED Rename yarn object types in yarn.dia                              |         |       |  0:20 |   0.8 |
 | COMPLETED Use extension matching for exogenous models                       |         |       |  0:52 |   2.2 |
 | COMPLETED Rename external transform                                         |         |       |  0:17 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -91,6 +91,8 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-08-26 Sat 09:00]--[2017-08-26 Sat 09:20] =>  0:20
+    CLOCK: [2017-08-26 Sat 08:51]--[2017-08-26 Sat 08:59] =>  0:08
     CLOCK: [2017-08-21 Mon 15:16]--[2017-08-21 Mon 15:27] =>  0:11
     CLOCK: [2017-08-20 Sun 21:21]--[2017-08-20 Sun 21:41] =>  0:20
     CLOCK: [2017-08-08 Tue 06:41]--[2017-08-08 Tue 06:53] =>  0:12
@@ -504,62 +506,6 @@ mean a model transformation. To avoid confusion we should rename the
 existing transformers to converters, adapters or some other
 out-of-the-way name.
 
-*** Add canonical archetype support to yarn                           :story:
-
-We need to add a new attribute in context which captures the canonical
-archetypes.
-
-Notes:
-
-- kernel must also return canonical archetype by element type
-  index. Perhaps we should have a struct that aggregates both:
-  archetype locations for meta-type? Or kernel can just return a
-  =std::pair=.
-- at present we have placed the canonical archetype resolution as part
-  of the element properties. However, we do not need to have this at
-  the element level since its a meta-type property and can be
-  determined up-front. However, we do need to resolve a name into a
-  meta-type before we can resolve a meta-type into a concrete
-  archetype.
-- we need to unpick the notion of whether a formatter is "includible"
-  or not from the notion of canonical archetypes. Canonical archetypes
-  is meta-model concept: given a facet and a meta-model type, which
-  archetype represents the "key" definition of the element. It just so
-  happens that this function has a use in identifying the files to
-  include.
-
-Tasks:
-
-- add a map from name id to meta-name id in intermediate model.
-- add a map from meta name id to map of canonical archetype to
-  archetype location.
-
-*** =Nameable= concept moved position on code generation              :story:
-
-During the exogenous model work, yarn's =Nameable= concept moved
-position. We need to look at how the parent changes were done to see
-if they are stable or not.
-
-*** Enable kernel directories trait is on quilqt                      :story:
-
-When we moved the kernel logic into yarn from quilt, we did not rename
-the traits.
-
-*** Add models for the executables                                    :story:
-
-At present the executables are all hand-crafted. However, as we want
-to move the options into each executable we need them to be in a
-model.
-
-Tasks:
-
-- create a model for each executable and add the options to the model;
-- create options in yarn and stop using knitting options;
-- add meta-data to generate an executable instead of a library in
-  CMake.
-- generate a main skeleton if one does not exist.
-- remove options project.
-
 *** Throw on unsupported stereotypes                                  :story:
 
 In some cases we may support a feature in one language but not on
@@ -577,6 +523,43 @@ used at the top that contains the modeline:
 : <#@ modeline="-*- mode: poly-stitch; tab-width: 4; indent-tabs-mode: nil; -*-" #>
 
 Stitch can read this KVP and ignore it.
+
+*** Change order of includes according to Lakos major design rule     :story:
+
+Lakos says:
+
+#+begin_quote
+The .c file of every component should include its own .h file as the
+first substantive line of code.
+#+end_quote
+
+We decided to include it as the last line. However, Lakos approach has
+the side-effect of automatically detecting headers that are missing
+includes. We used to do this manually by generating =.cpp= files that
+just included the header but then had to remove it because it was
+slowing down compilation. With Lakos approach we get the best of both
+worlds.
+
+We need to also update the generated code to follow this
+approach. This will require some thinking.
+
+*** Investigate usage of origin type                                  :story:
+
+With the current setup of the transforms, we always know who the
+target model is. Thus the =origin_types= flag may not be used
+correctly at present.
+
+*** Rename ODB parameters                                             :story:
+
+At present we use the following form:
+
+: #DOGEN ODB_PRAGMA=no_id
+
+We need to use the new naming style =cpp.odb.pragma=. We also need to
+rename the opaque_parameters to reflect ODB specific data.
+
+Finally we should no longer attempt to derive the ODB pragma
+context. We should just add it verbatim.
 
 *** Use namespaced stereotypes                                        :story:
 
@@ -596,257 +579,87 @@ namespace:
 
 And so forth. The namespace name probably needs a bit of thinking.
 
-*** Move enablement into yarn                                         :story:
+*** Cannot make qualified references to concepts                      :story:
 
-It seems that the concepts around enablement are actually not kernel
-specific but instead can be generalised at the meta-model level. We
-need to create adequate representations in yarn to handle facets,
-etc. We then need to move across the code that computes enablement
-into yarn so that all kernels can make use of it.
+At present it is not possible to consume concepts defined in a
+referenced model, nor is it possible to refer to a concept in a
+different module from the module in which the element is in, e.g.: say
+concept C0 is declared in module M0; all types of M0 can have C0 as
+stereotype and that will resolve. However any types on any other
+module cannot see the concept.
 
-Problems:
+One suggestion is to allow scoped names in stereotypes:
+=module::Concept=.
 
-- we are checking to see if the hash facet is enabled with c++ 98; if
-  so, we throw as this facet is incompatible. We cannot do this from
-  yarn since we do not know what c++ standards are.
-- because we do not have a mapping between a archetype location and
-  the meta-type, we will be enabling/disabling all archetype locations
-  across all meta-types.
-- because we do not have element segmentation, the element extensions
-  will be disabled. Actually this will probably work just the same,
-  given that all elements exist.
-- enablement must be done after external transformations so it picks
-  up fabric types.
-- we need to support formatting styles in order to be able to use the
-  artefact properties from the meta-model.
-- in quilt.cpp, someone did an upfront generation of all archetype
-  properties against the archetype locations. We not doing that in
-  yarn, so nothing is coming out. This was done during transformation
-  in formattables.
-- with a move into yarn, we seem to have broken the overwrite flag
-  logic; changes no longer result in new code being generated.
-- we also have borked the includes: dependency builder is looking into
-  the formattables instead of element. However, we then run into
-  segmentation issues because we cannot find forward declarations on
-  the main element.
+*** Add support for cross-model concept refinement                    :story:
 
-To do:
-
-- kernel registrar type index map - done.
-- c# formatter registrar type index map - done.
-- bug in template instantiating: artefact expansions do not seem to
-  take kernel into account - done.
-
-*Previous Understanding*
-
-We need to make use of the exact same logic as implemented in
-=quilt.cpp= for enablement. Perhaps all of the enablement related
-functionality can be lifted and grafted onto quilt without any major
-changes.
-
-*** Move formatting styles into yarn                                  :story:
-
-We need to support the formatting styles at the meta-model level.
-
-*** Move element segmentation into yarn                               :story:
-
-We've added the notion that an element can be composed of other
-elements in quilt, in order to handle forward declarations. However,
-with a little bit of effort we can generalise it into yarn. It would
-be useful for other things such as inner classes. We don't need to
-actually implement inner classes right now but we should make sure the
-moving of this feature into yarn is compatible with it.
-
-Notes:
-
-- seems like we have two use cases: a) we need all elements, master
-  and extensions and we don't really care about which is which. b) we
-  only want masters. However, we must be able to access the same
-  element properties from either the master or the extension. Having
-  said all that, it seems we don't really need all of the element
-  properties for both - forward declarations probably only need:
-  decoration and artefact properties.
-- we don't seem to use the map in formattables model anywhere, other
-  than to find master/extension elements.
-- Yarn model could have two simple list containers (masters and
-  all). Or maybe we don't even need this to start off with, we can
-  just iterate and skip extensions where required.
-- so in conclusion, we to move decoration, enablement and dependencies
-  into yarn (basically decoration and artefact properties) first and
-  then see where segmentation ends.
+We've implemented support for cross-model inheritance in sprint 87 but
+we did not cover concepts. Most of the approach is the same, but
+unfortunately we can't just reuse it.
 
 Tasks:
 
-- add a concept for element extensions: =Extensible=. Contains a list
-  of element pointers.
-- populate it with the extensions.
-- change enablement to merge all element properties of extensible
-  elements.
+- we need a refines field which is a text collection.
+- we need refinement settings, factory etc.
+- update parsing expander.
 
-*** Create a yarn locator                                             :story:
+*** Add support for "one off" profiles                                :story:
 
-We need to move all functionality which is not kernel specific into
-yarn for the locator. This will exist in the helpers namespace. We
-then need to implement the C++ locator as a composite of yarn
-locator. It will live in fabric.
+At present one can define top-level profiles. These are useful, but in
+practice we ended up still defining a lot of things in each model. We
+need a way to associate a profile with a model by supplying it on the
+command line. That way users can create profiles and store them next
+to the model rather than having to create a data directory, etc etc.
 
-*Other Notes*
+Actually the problem is that profiles aren't really implemented
+correctly. First we should not call them profiles at all since they
+are not UML profiles and overloading the term just generates
+confusion. Second its important to understand how Dogen profiles come
+about:
 
-At present we have multiple calls in locator, which are a bit
-ad-hoc. We could potentially create a pattern. Say for C++, we have
-the following parameters:
-
-- relative or full path
-- include or implementation: this is simultaneously used to determine
-  the placement (below) and the extension.
-- meta-model element:
-- "placement": top-level project directory, source directory or
-  "natural" location inside of facet.
-- archetype location: used to determine the facet and archetype
-  postfixes.
-
-E.g.:
-
-: make_full_path_for_enumeration_implementation
-
-Interestingly, the "placement" is a function of the archetype location
-(a given artefact has a fixed placement). So a naive approach to this
-seems to imply one could create a data driven locator, that works for
-all languages if supplied suitable configuration data. To generalise:
-
-- project directory is common to all languages.
-- source or include directories become "project
-  sub-directories". There is a mapping between the artefact location
-  and a project sub-directory.
-- there is a mapping between the artefact location and the facet and
-  artefact postfixes.
-- extensions are a slight complication: a) we want to allow users to
-  override header/implementation extensions, but to do it so for the
-  entire project (except maybe for ODB files). However, what yarn's
-  locator needs is a mapping of artefact location to  extension. It
-  would be a tad cumbersome to have to specify extensions one artefact
-  location at a time. So someone has to read a kernel level
-  configuration parameter with the artefact extensions and expand it
-  to the required mappings. Whilst dealing with this we also have the
-  issue of elements which have extension in their names such as visual
-  studio projects and solutions. The correct solution is to implement
-  these using element extensions, and to remove the extension from the
-  element name.
-- each kernel can supply its configuration to yarn's locator via the
-  kernel interface. This is fairly static so it can be supplied early
-  on during initialisation.
-- there is still something not quite right. We are performing a
-  mapping between some logical space (the modeling space) and the
-  physical space (paths in the filesystem). Some modeling elements
-  such as the various CMakeLists.txt do not have enough information at
-  the logical level to tell us about their location; at present the
-  formatter itself gives us this hint ("include cmakelists" or "source
-  cmakelists"?). It would be annoying to have to split these into
-  multiple archetypes just so we can have a function between the
-  archetype location and the physical space. Although, if this is the
-  only case of a modeling element not mapping uniquely, perhaps we
-  should do exactly this.
-- However, we still have inclusion paths to worry about. As we done
-  with the source/include directories, we need to somehow create a
-  concept of inclusion path which is not language specific; "relative
-  path" and "requires relative path" perhaps? These could be a
-  function of archetype location.
-
-*** Move dependencies into yarn                                       :story:
-
-Actually the dependencies will be generated at the kernel level
-because 99% of the code is kernel specific. However, we need to make
-it an external transform.
+- we extend the UML meta-model via stereotypes to support all of the
+  required yarn and quilt concepts.
+- when we instantiate the yarn/quilt types via a UML model, we need to
+  supply the values for the attributes which have been extended. If
+  done properly this would happen via UML tagged values. Dia does not
+  support these. At any rate, at present we use Dogen meta-data which
+  is almost like tagged values.
+- Dogen profiles are then an attempt to create bundles of tagged
+  values with pre-populated values so that we do not need to manually
+  populate them for every type. Instead, we can associate a stereotype
+  with the type and then the system will automatically populate the
+  values from the bundle.
+- From all of this it follows that it should be possible to define
+  these "bundles" directly in a UML diagram. If we were to use UML
+  properly (or at least almost properly), we would define a class with
+  a stereotype of =stereotype=, a name of the stereotype we'd like to
+  define (say =Serializable=) and then its tagged values are the keys
+  and values of the meta-data we want to define. This is strictly
+  speaking not correct UML because we are stating we are augmenting
+  the UML meta-model (hence =stereotype=) but then we end up
+  instantiating a meta-model class with some predefined values. Its
+  not clear how to express this in UML. Note that we have exactly the
+  same issue with concepts.
+- and, after some thinking, we are trying to do exactly the same thing
+  as we are already doing for concepts: i.e. some kind of meta-level
+  operation that allows us to add structural features to an
+  element. Thus we can just use concepts, which are not even defined
+  in UML - augmenting its meaning will not take us away from the
+  literature. We can very simply add a last step to concepts transform
+  which merges the annotations of the concept objects, using exactly
+  the machinery we defined for profiles. The only slight problem is
+  that we cannot reuse concepts across models.
 
 Tasks:
 
-- create the locator in the C++ external transform
-- create a dependencies transform that uses the existing include
-  generation code.
+- add annotations merging to concepts processing. Should cause no
+  changes at all on all models.
+- create a model in dogen defining basic concepts.
 
-*Previous understanding*
+Links:
 
-It seems all languages we support have some form of "dependencies":
+- [[https://msdn.microsoft.com/en-us/library/dd465146.aspx][Standard stereotypes for UML models]]
 
-- in c++ these are the includes
-- in c# these are the usings
-- in java these are the imports
-
-So, it would make sense to move these into yarn. The process of
-obtaining the dependencies must still be done in a kernel dependent
-way because we need to build any language-specific structures that the
-dependencies builder requires. However, we can create an interface for
-the dependencies builder in yarn and implement it in each kernel. Each
-kernel must also supply a factory for the builders.
-
-*** Generate file paths as a transform                                :story:
-
-Add a fabric transform for file path generation.
-
-*** Create "opaque" kernel and element properties                     :story:
-
-As part of the element container, we can have a set of base classes
-that are empty: =opaque_element_properties=. This class is then
-specialised in each kernel with the properties that are specific to
-it. We probably need an equivalent for:
-
-- kernel level properties
-- element level properties
-- attribute level properties.
-
-We then have to do a lot of casting in the helpers.
-
-Once we got these opaque properties, we can then create "kernel
-specific expanders" which are passed in to the yarn workflow. These
-populate the opaque properties.
-
-*** Add support for inline namespaces                                 :story:
-
-Enable c++17. - windows requires cpp latest. Then fix inner namespaces
-(e.g. a::b::c).
-
-We still need to support the old syntax for pre c++-17.
-
-We need to add a new standard to =quilt.cpp= and when its set to
-c++-17 we should automatically use inline namespaces.
-
-*** Move helpers into yarn                                            :story:
-
-Looking at helpers, it is clear that they are common to all
-languages. We just need to rename the terminology slightly -
-particularly wrt to streaming properties - and then move this code
-across into yarn.
-
-*** Move facet properties into yarn                                   :story:
-
-We should be able to handle these generically in yarn.
-
-*** Move ORM camel-case and databases into yarn                       :story:
-
-We should handle this property at the ORM level, rather than at the
-ODB level.
-
-Similarly, we should move the ODB databases into yarn and make that a
-ORM-level concept.
-
-*** Rename fabric and formattables                                    :story:
-
-In the long run, we should use proper names for these namespaces:
-
-- fabric is meta-model;
-- formattables houses transformations.
-
-*** Assorted problems to look at                                      :story:
-
-These need to be put into stories:
-
-- No flat mode: we need to be able to generate no folders at all.
-- Registrar coming out even when there is no inheritance.
-- No setting to add include for precompiled headers: stdafx.h
-- No vcxproj for c++ and no way to add code-generated files. Ideally
-  one should be able to include a code-generated file into project
-  with list of items
-- sort out traits.
 
 ** Deprecated
 *** CANCELLED Map upsilon primitives to intrinsics                    :story:
